[package]
edition = "2021"
name = "blob_list"
description = "Proxy HTTP requests and log them."
version = "0.1.0"
authors = ["Alex Nichol <unixpickle@gmail.com>"]

[dependencies]
reqwest = { version="0.11.11", default-features = false, features = ["rustls-tls-native-roots"] }
tokio = { version = "1.20.1", features=["full"] }
futures-core = { version = "0.3.23" }
clap = { version = "3.2.20", features=["derive"] }
serde_json = { version = "1.0" }
regex = { version = "1" }
