[package]
edition = "2021"
name = "map_dump"
description = "Doing some scraping and data analysis in Rust."
version = "0.1.0"
authors = ["Alex Nichol <unixpickle@gmail.com>"]

[dependencies]
anyhow = { version = "1.0" }
async-channel = { version = "1.7.1" }
clap = { version = "3.2.20", features=["derive"] }
futures-core = { version = "0.3.23" }
futures-util = { version = "0.3.23" }
reqwest = { version="0.11.11", default-features = false, features = ["rustls-tls-native-roots"] }
scraper = { version="0.13.0" }
serde = { version="1.0", features = ["derive"] }
serde_json = { version="1.0" }
tokio = { version = "1.20.1", features=["full"] }
